--- a/Occupation Data_April26.Rmd
+++ b/Occupation Data_April26.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Occupational Data"
 author: "Rob Wells, Mary Hennigan, Katy Seiter, Abby Zimmardi and Rachell Sanchez-Smith" 
-date: "4/21/2021"
+date: "4/27/2021"
 output: pdf_document
 ---
 
@@ -49,8 +49,7 @@ cleaned_master$date <- as.Date(cleaned_master$date)
 glimpse(cleaned_master)
 ```
 #fix Uniqueid of Nebo Poultry in yell-pope create at #146 instead of #2
- df["rowName", "columnName"] <- value
- df[df$serial.id==5, "gender"] <- 1
+
 ```{r}
 #Nebo Poultry, "yell, pope" gets own ID
 cleaned_master[4,1] <- 146
@@ -144,6 +143,9 @@ sum(new_cases$New_Cases)
 #
 ```
 
+
+#Worker Illnesses by Month by Mary Hennigan
+#https://public.flourish.studio/visualisation/5925837/ 
 ```{r}
 #New summary by month
 monthsum <- new_cases %>%
@@ -157,18 +159,35 @@ sum(monthsum$month_total)
 
 #Revised: New cases per facility, county totals - April 27
 ```{r}
-countysum3 <- new_cases %>%
+county_month <- new_cases %>%
    select(cleaned_county, New_Cases, yearmon) %>% 
    group_by(cleaned_county, yearmon) %>% 
    summarize(county_total=sum(New_Cases))  
   
-sum(countysum3$county_total)
+sum(county_month$county_total)
 
-write.csv(countysum3, "countysum_April27.csv")
+write.csv(county_month, "county_month_April27.csv")
 ```
 
 
 
+#County Analysis - April 27
+#Top Ten Counties Chart: https://public.flourish.studio/visualisation/5982769/
+#Map: https://datawrapper.dwcdn.net/NwfE2/1/
+# County Race chart: https://public.flourish.studio/visualisation/5886015/
+# Animated Map of Arkansas Worker Cases by Ravi Brock
+```{r}
+countysum <- new_cases %>%
+   select(cleaned_county, New_Cases) %>% 
+   group_by(cleaned_county) %>% 
+   summarize(county_total=sum(New_Cases))  
+
+sum(countysum$county_total)
+
+write.csv(countysum, "countysum_April27.csv")
+```
+
+#Company totals
 ```{r}
 company_site_totals <- cleaned_master %>% 
   select(cleaned_company, cleaned_county, Uniqueid, date, total_number_of_cases) %>% 
@@ -178,10 +197,13 @@ company_site_totals <- cleaned_master %>%
 
 sum(company_site_totals$total_number_of_cases)
 
-#write.csv(company_site_totals, "company_site_totals.csv")
+write.csv(company_site_totals, "company_site_totals.csv")
 glimpse(company_site_totals)
 ```
 
+#Company totals:
+#Feeds Wells Datawrapper table: https://www.datawrapper.de/_/N2CYu/
+#Hennigan chart: https://public.flourish.studio/visualisation/5902976/
 ```{r}
 #totals per company
 companytotals <- company_site_totals  %>% 
@@ -194,9 +216,8 @@ companytotals$percent <- formattable::percent(companytotals$percent)
 
 companytotals
 
-
 write.csv(companytotals, "company_totals.csv")
-#Feeds this Datawrapper table: https://www.datawrapper.de/_/N2CYu/
+
 ```
 
 #company with the highest monthly totals  
@@ -210,6 +231,23 @@ monthcototals <- cleaned_master %>%
 write.csv(monthcototals, "monthcostotals.csv")
 ```
 
+
+#Spotlight on Tyson and Berry Street facility
+#Feeds this chart: https://public.flourish.studio/visualisation/5917573/
+```{r}
+
+tysonberry <- cleaned_master %>% 
+  select(Uniqueid, date, company_name, total_number_of_cases) %>% 
+  filter(Uniqueid == "19") %>% 
+  arrange(desc(date))
+
+tysonberry
+write.csv(tysonberry, "tysonberry.csv")
+
+```
+
+
+
 #max of each worksite by yearmon
 ```{r}
 maxworksite_month1 <- cleaned_master %>% 
@@ -220,79 +258,15 @@ maxworksite_month1
 ```
 
 
-
-#Stopped 8:50 am April 27
-#Stopped 8:50 am April 27
-#NOTES BELOW
-#NOTES BELOW
-#NOTES BELOW
-#NOTES BELOW
-
-
-
-
-
-
-
-#PROBLEMS WITH A monthly time series
+#this created max number of each worksite by year and month
 ```{r}
-#per month totals per county for a time series
-# month4_totals <- cleaned_master %>% 
-#   mutate(yearmon = format(date, "%Y-%m")) %>%
-#  select(cleaned_county, Uniqueid, yearmon, date, total_number_of_cases) %>% 
-#   group_by(Uniqueid, cleaned_county, yearmon) %>% 
-#   filter(total_number_of_cases == max(total_number_of_cases)) %>% 
-#   filter(date == max(date))
-# 
-# month5_totals <- month4_totals %>% 
-#   select(cleaned_county, yearmon, total_number_of_cases) %>% 
-#   group_by(cleaned_county, yearmon) %>%
-#   summarize(total=sum(total_number_of_cases))
-
-#write.csv(month5_totals, "monthsum_April26.csv")
-
+maxworksite_month <- cleaned_master %>% 
+   select(cleaned_company, date, yearmon, Uniqueid, cleaned_county, total_number_of_cases) %>% 
+  group_by(cleaned_company, Uniqueid, yearmon) %>%  
+  top_n(1, date) 
+maxworksite_month 
+write.csv(maxworksite_month, "maxworksite_month.csv")
 ```
-
-
-#Revised Total number of cases in a county for the entire dataset - April 26
-```{r}
-countysum3 <- month4_totals %>%
-   group_by(cleaned_county, Uniqueid) %>%
-   filter(total_number_of_cases == max(total_number_of_cases)) %>% 
-   summarize(total=sum(total_number_of_cases)) %>% 
-   ungroup() %>% 
-   select(cleaned_county, total) %>% 
-   group_by(cleaned_county) %>% 
-   summarize(county_total=sum(total))  
-  
-
-sum(countysum3$county_total)
-
-#write.csv(countysum3, "countysum_April26.csv")
-```
-
-
-
-#PROBLEMS WITH A monthly time series
-#total by month
-```{r}
-monthsum <- month4_totals %>%
-   select(cleaned_county, yearmon, Uniqueid, total_number_of_cases) %>% 
-   group_by(cleaned_county, yearmon, Uniqueid) %>%
-   filter(total_number_of_cases == max(total_number_of_cases)) %>% 
-   summarize(total=sum(total_number_of_cases)) %>% 
-   ungroup() %>% 
-   select(yearmon, total) %>% 
-   group_by(yearmon) %>% 
-   summarize(county_total=sum(total))  
-  
-
-sum(monthsum$county_total)
-
-#write.csv(monthsum, "countysum_April26.csv")
-```
-
-
 
 #internal check
 ```{r}
@@ -308,65 +282,7 @@ check <- cleaned_master %>%
 check
 ```
 
-#this created max number of each worksite by year and month
-```{r}
-maxworksite_month <- cleaned_master %>% 
-   select(cleaned_company, date, yearmon, Uniqueid, cleaned_county, total_number_of_cases) %>% 
-  group_by(cleaned_company, Uniqueid, yearmon) %>%  
-  top_n(1, date) 
-maxworksite_month 
-write.csv(maxworksite_month, "maxworksite_month.csv")
-```
 
-#total number of cases in a county
-```{r}
-countysum <- maxworksite_month %>% 
-  group_by(cleaned_county, yearmon) %>% 
-  summarize(total_cases=sum(total_number_of_cases))
- 
-
-#write.csv(countysum, "countysum.csv")
-glimpse(countysum)
-```
-
-
-#total number of cases in a county for a year
-# ```{r}
-# countysum2 <- countysum %>% 
-#   group_by(cleaned_county) %>% 
-#   summarize(All_Worker_Covid_Cases=sum(total_cases))
-#  
-# 
-# write.csv(countysum2, "countysum2.csv")
-# 
-# sum(countysum2$All_Worker_Covid_Cases)
-# 
-# ```
-
-#county total case reports in a county
-```{r}
-month_counts <-cleaned_master %>%
-  select(date,cleaned_city, cleaned_county, cleaned_company, month) %>% 
-  group_by(month) %>% 
-  count() %>% 
-  arrange(desc(n))
-month_counts
-write.csv(month_counts,"month_counts.csv")
-
-#Refined: July 139; June 135; Dec 110, Aug 108
-#Notes: June, 147, July, 142, Dec, 110 and Aug, 109 are the top months and only months above 100.
-```
-
-```{r}
-dates <- cleaned_master %>% 
-  select(date, cleaned_company, number_active_cases) %>% 
-  group_by(date) %>% 
-  summarise(total = sum(number_active_cases)) %>% 
-  arrange(desc(date))
-
-dates
-write.csv (dates,"active_cases_dates.csv")
-```
 
 
 #City Analysis
@@ -380,31 +296,12 @@ cleaned_city_report <- cleaned_master %>%
 
 cleaned_city_report
 
-#write.csv(cleaned_city_report, "cleaned_city_report.csv")
+write.csv(cleaned_city_report, "cleaned_city_report.csv")
 
-#Report shows Springdale, 73; Jonesboro, 61; Rogers, 60
+#Report shows Springdale, 75; Jonesboro, 61; Rogers, 60
 
 ```
 
-#County Analysis
-#Top Ten Counties Chart https://public.flourish.studio/visualisation/5527376/ 
-```{r}
-#Analyze records by county location
-cleaned_county_report <- cleaned_master %>% 
-  select(date,cleaned_county) %>% 
-  group_by(cleaned_county) %>% 
-  count() %>% 
-  arrange(desc(n))
-
-cleaned_county_report
-
-write.csv(cleaned_county_report, "cleaned_county_report.csv")
-
-#WELLS NOTE: Two of the wealthiest counties in Arkansas have the highest number of occupational reports
-
-#New: Benton, 97; Washington 89; Pope 68; Craighead 61 are the top counties
-#Old: Benton, 95; Washington 83; Pope 68;Craighead 56 are the top counties.
-```
 
 #----------------------------------------------------------------------------
 #  Calculate Worker Covid Cases as Percentage of All Community Cases By Month
@@ -414,43 +311,43 @@ write.csv(cleaned_county_report, "cleaned_county_report.csv")
 ```{r}
 master2 <- rio::import("https://raw.githubusercontent.com/Arkansascovid/Main/master/master_file.csv")
 ## Subset dataframe and assign months
-test <- master2 %>% 
+temp <- master2 %>% 
   select(county_nam, mydate, New_Cases_Today, positive, confirmed_pos) %>% 
   filter(county_nam!="Arkansas_all_counties") %>% 
   filter(county_nam!="MissingCountyInfo") %>% 
   filter(mydate >= "2020-04-09" & mydate <= "2021-04-15")
 
 #Process dates** 
-test$date <- ymd(test$mydate)
-test$year <- year(test$date)
-test$month <- month(test$date, label=TRUE)
+temp$date <- ymd(temp$mydate)
+temp$year <- year(temp$date)
+temp$month <- month(temp$date, label=TRUE)
 
-test <- test %>% 
+temp <- temp %>% 
   mutate(yearmon = format(date, "%Y-%m"))
 
 ```
 
 #combine the positive (confirmed and probable from Sept 13 forward) with the confirmed_pos (Sept 12 and earlier) into a new column called positive2
 ```{r}
-test2 <- test %>% 
+temp2 <- temp %>% 
   filter(date <= "2020-09-12") %>% 
   mutate(Total_Positive = (confirmed_pos))
 
 
-test3 <- test %>% 
+temp3 <- temp %>% 
   filter(date > "2020-09-12") %>% 
   mutate(Total_Positive = (positive))
 
-test <- smartbind(test2, test3)
-test$date <- ymd(test$mydate)
-glimpse(test)
+temp <- smartbind(temp2, temp3)
+temp$date <- ymd(temp$mydate)
+glimpse(temp)
 
 
 ```
 #Clean the county names
 
 ```{r}
-test <- test %>%
+temp <- temp %>%
   mutate(cleaned_county = tolower(county_nam)) %>%
   mutate(cleaned_county = case_when(
     str_detect(cleaned_county, "little") ~ "little_river",
@@ -461,7 +358,7 @@ test <- test %>%
     TRUE ~ cleaned_county
   ))
 
-test$cleaned_county <- str_trim(test$cleaned_county) 
+temp$cleaned_county <- str_trim(temp$cleaned_county) 
 ```
 
 
@@ -471,7 +368,7 @@ test$cleaned_county <- str_trim(test$cleaned_county)
 
 ## Master counties and months table, May 2020 - April 2021 ##
 ```{r}
-master_counties_months <- test %>%
+master_counties_months <- temp %>%
   group_by(yearmon, cleaned_county, Total_Positive) %>%
   summarise(xnewcases=sum(New_Cases_Today)) %>% 
   top_n(1, Total_Positive)
@@ -490,6 +387,7 @@ master_counties_months <- master_counties_months %>%
   arrange(cleaned_county) %>%  
   mutate(New_Cases = (Total_Positive-lag(Total_Positive))) %>% 
   filter(yearmon!="2020-04")
+
 #We cut April 2020 since this month is subtracted from the previous entry, April 2021, giving an erroneous value
 
 write.csv(master_counties_months, "master_counties_months.csv")
@@ -499,9 +397,10 @@ glimpse(master_counties_months)
 #Combine with countysum from Occupational Data
 
 ```{r}
-zzz <- countysum %>% 
+
+zzz <- county_month %>% 
   inner_join(master_counties_months, by=c("cleaned_county"="cleaned_county", "yearmon"="yearmon")) %>% 
-    rename(Year_Month = yearmon, County = cleaned_county, Worker_Covid = total_cases)
+    rename(Year_Month = yearmon, County = cleaned_county, Worker_Covid = county_total)
 
 zzz <- zzz %>% 
   select(Year_Month, County, Worker_Covid, Total_Positive, New_Cases)
@@ -514,6 +413,7 @@ glimpse(zzz)
 #Worker Community_New_Case is Monthly Cumulative total of the companies reporting / New Cases in Community
 #Worker_Cumulative_Pct is Monthly Cumulative total of the companies reporting / Monthly Cumulative Positive in Community
 ```{r}
+
 occupation_month <- zzz %>% 
   mutate(Worker_Community_New_Case_Pct = (Worker_Covid/New_Cases)) %>% 
   mutate(Worker_Cumulative_Pct = (Worker_Covid/Total_Positive))  
@@ -522,33 +422,8 @@ occupation_month$Worker_Community_New_Case_Pct <- formattable::percent(occupatio
 
 occupation_month$Worker_Cumulative_Pct <- formattable::percent(occupation_month$Worker_Cumulative_Pct)
 
-write.csv(occupation_month, "occupation_month.csv")
+#write.csv(occupation_month, "occupation_month.csv")
 #feeds this graphic: https://app.flourish.studio/visualisation/5847959/edit?
-```
-
-
-
-
-#Company Analysis
-#Top 10 Companies Chart needs work: 
-#Revised Look at the company names 
-#add the function that produces percent of the whole - Hennigan can't figure out the funciton
-
-```{r}
-cleaned_company_report <- cleaned_master %>% 
-  count(cleaned_company) %>% 
-  arrange(desc(n)) 
-
-cleaned_company_report
-write.csv(cleaned_company_report, "cleaned_company_report.csv")
-  
-
-##Company analysis shows Tyson 281 (289 previously); George's 41; ConAgra 40; Simmons Foods 40 (Possible 40 with one more cleaning); Peco 37
-
-
-#TOTAL NUMBER OF ARK STATE HEATH DEPT REPORTS PER COMPANY SINCE MAY 19, 2020 (814)
-#SIX OF TEN ARE POULTRY PROCESSING
-#TYSON IS 32% OF ALL REPORTS
 ```
 
 
